# auth-service-test

./: .dockerignore  .gitlab-ci.yml  .hlint.yaml  Dockerfile  Makefile  README.md  SAML.md  auth-service.cabal  auth-service.config  build.env  docker-compose.dev.yml  docker-compose.yml  haskell-make-project-77DV  nginx.conf  nginx.conf.m4  package.yaml  run.sh  shell.nix  signed-authorization.cabal  stack.yaml  test.sh  testsetup.sh  upstream-nginx.conf
Doc/: Library.md
auth-service-core/: Makefile  auth-service-core.cabal  stack.lts17.yaml  stack.lts18.yaml  stack.yaml
auth-service-types/: auth-service-types.cabal  stack.yaml
auth_web/: Dockerfile  dnsmasq.conf
client/: AuthService.hs
devel/templates/: password-reset-email.html.mustache
docker-compose-example/: README.md  docker-compose.yaml
docker/stack-deployimage/: Dockerfile
frontend/: auth-service.include  auth.html  nginx.conf
proxy/: Dockerfile  run.sh
service/: Dockerfile  Makefile  README.md  auth-service-local.config  auth-service.cabal  docker-compose.test.yaml  package.yaml  stack.dockerhub.yaml  stack.yaml
service/src/: Api.hs  Audit.hs  Backend.hs  Config.hs  Dev.hs  Monad.hs  PasswordReset.hs  Run.hs  SAML.hs  (+5 more)
src/: Api.hs  AuthServiceTypes.hs  Backend.hs  Config.hs  Headers.hs  Helpers.hs  JWS.hs  Logging.hs  Main.hs  Nonce.hs  Run.hs  Sign.hs  SignedAuth.hs  Twilio.hs  Types.hs  User.hs  Util.hs  schema
test/: Test.hs
test-suite/: Main.hs
tests/: test  testsetup.sh  upstream-nginx.conf  upstream.nginx.conf
web/: Dockerfile  auth.html  nginx.conf  nginx.conf.m4  run.sh
(+27 files in other folders)
