name:                auth-service
version:             0.0.0
synopsis:            Auth service
description:         Auth service
license:             AllRightsReserved
license-file:        LICENSE
author:
maintainer:
copyright:           2015
category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  source/schema

executable auth-service
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  other-modules:     Api
                   , Backend
                   , Helpers
                   , Persist.Schema
                   , Types
                   , User
  build-depends:     aeson
                   , base >= 4 && < 5
                   , base64-bytestring >= 1.0
                   , bcrypt
                   , bytestring
                   , bytestring-conversion >= 0.3
                   , either
                   , entropy >= 0.3
                   , exceptions >= 0.8
                   , lens
                   , monad-logger >= 0.3
                   , mtl >= 2.2
                   , path-pieces
                   , persistent >= 2.2
                   , persistent-postgresql >= 2.2
                   , persistent-template >= 2.1
                   , servant-server >= 0.4.4
                   , text
                   , time >= 1.5
                   , wai >= 3.0
                   , warp
                   , configurator
